# portfolio-tracker

./: .gitignore  .secrets.baseline  .vulture_whitelist.py  pyproject.toml  transaction_examples.py  tryit.py
src/portfolio_tracker/: bootstrap.py
src/portfolio_tracker/application/: supported_institutions.py
src/portfolio_tracker/application/account/: __init__.py  command_service.py  exceptions.py  query_service.py  service.py
src/portfolio_tracker/application/contracts/: commands.py  dto_assembler.py  dtos.py  exceptions.py  queries.py
src/portfolio_tracker/application/encryption/: __init__.py
src/portfolio_tracker/application/fx/: __init__.py  client.py  exceptions.py  service.py
src/portfolio_tracker/application/institution/: __init__.py  client.py  exceptions.py  registry.py  report_parser.py
src/portfolio_tracker/application/market_data/: __init__.py  client.py  exceptions.py  service.py
src/portfolio_tracker/application/persistence/: __init__.py  credentials_store.py  repositories.py  unit_of_work.py
src/portfolio_tracker/application/portfolio/: __init__.py  query_service.py  service.py
src/portfolio_tracker/application/ports/: credentials_store.py  encryptor.py  repositories.py  unit_of_work.py
src/portfolio_tracker/application/ports/clients/: __init__.py  fx_client.py  fx_rates_client.py  institution_client.py  institution_report_parser.py
src/portfolio_tracker/application/services/accounts/: __init__.py  account_service.py  institutions.py
src/portfolio_tracker/application/services/analytics/: query_service.py
src/portfolio_tracker/application/services/ledger/: __init__.py  query_service.py  transaction_service.py
src/portfolio_tracker/application/services/market_data/: __init__.py  fx_service.py  market_data_service.py
src/portfolio_tracker/application/services/sync/: __init__.py  sync_service.py
src/portfolio_tracker/application/sync/: __init__.py  exceptions.py  service.py
src/portfolio_tracker/application/transaction/: __init__.py  command_service.py  query_service.py  service.py
src/portfolio_tracker/application/user/: __init__.py  exceptions.py  service.py
src/portfolio_tracker/domain/account/: __init__.py  models.py
src/portfolio_tracker/domain/accounts/: __init__.py  accounts.py
src/portfolio_tracker/domain/fx/: __init__.py
src/portfolio_tracker/domain/institution/: __init__.py  institution.py  models.py
src/portfolio_tracker/domain/instrument/: __init__.py  factory.py  models.py
src/portfolio_tracker/domain/instruments/: __init__.py  factory.py  instruments.py
src/portfolio_tracker/domain/ledger/: __init__.py  transaction.py  transaction_adjuster.py
src/portfolio_tracker/domain/market_data/: __init__.py  fx_rates.py  models.py
src/portfolio_tracker/domain/portfolio/: __init__.py  builder.py  evaluator.py  models.py
src/portfolio_tracker/domain/shared/: __init__.py  models.py  money.py
src/portfolio_tracker/domain/transaction/: __init__.py  adjuster.py
src/portfolio_tracker/domain/user/: __init__.py  user.py
src/portfolio_tracker/infrastructure/encryption/: __init__.py  fernet_encryptor.py
src/portfolio_tracker/infrastructure/fx/: __init__.py  frankfurter_client.py
src/portfolio_tracker/infrastructure/fx_rates/: frankfurter_client.py
src/portfolio_tracker/infrastructure/institution/: __init__.py  registry.py
src/portfolio_tracker/infrastructure/market_data/: __init__.py  yahoo_finance_client.py
src/portfolio_tracker/infrastructure/persistence/: credentials_serializer.py
src/portfolio_tracker/presentation/cli/: console.py  main.py  session.py
tests/: conftest.py  mocks.py
tests/unit/: test_money.py  test_position_builder.py  test_transaction_adjuster.py  test_transaction_validation.py
tests/unit/domain/fx/: test_fx_rates.py
tests/unit/domain/ledger/: test_transaction.py  test_transaction_adjuster.py
tests/unit/domain/market_data/: test_fx_rates.py
tests/unit/domain/shared/: test_money.py
tests/unit/domain/transaction/: test_adjuster.py  test_transaction.py
tests/unit/infrastructure/persistence/: conftest.py  test_credentials_mapper.py  test_credentials_serializer.py
(+52 files in other folders)
