[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "portfolio_tracker"
version = "0.1.0"
description = "A clean-architecture multi-currency investment ledger."
readme = "README.md"
requires-python = ">=3.14"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
classifiers = [
    "Programming Language :: Python :: 3.14",
    "Operating System :: Microsoft :: Windows :: Windows 11",
]

dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
portfolio_tracker = ["py.typed"]

[tool.mypy]
python_version = "3.14"
strict = true
files = ["src", "tests"]
