[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "portfolio_tracker"
version = "0.1.0"
description = "A clean-architecture multi-currency investment ledger."
readme = "README.md"
requires-python = ">=3.14"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
classifiers = [
    "Programming Language :: Python :: 3.14",
    "Operating System :: Microsoft :: Windows :: Windows 11",
]
dependencies = []

[project.scripts]
portfolio = "portfolio_tracker.presentation.cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
portfolio_tracker = ["py.typed"]

[tool.mypy]
python_version = "3.14"
strict = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = "yfinance"
ignore_missing_imports = true

[tool.pylint.main]
fail-under = 9.5

[tool.pylint.BASIC]
typevar-rgx = "^_?[A-Z][a-zA-Z0-9]*$"

[tool.pylint."messages control"]
disable = [
    "C0301", # Line too long (101/100) (line-too-long)
    "C0114", # Missing module docstring (missing-module-docstring
    "C0115", # Missing class docstring (missing-class-docstring)
    "C0116", # Missing function or method docstring (missing-function-docstring)
]

[tool.isort]
profile = "black"
line_length = 88
src_paths = ["src", "tests"]

[tool.taskipy.tasks]
format = "black src tests && isort ."
lint = "mypy src tests && pylint src tests"
audit = "pip-audit"
test = "pytest tests -v"
vulture = "vulture src .vulture_whitelist.py"
secrets = "git ls-files -z | xargs -0 detect-secrets-hook --baseline .secrets.baseline"

precommit = "task format && task lint && task audit && task test"
